# geting-started-with-plottly-dash

./: .gitignore  README.md  app.py  pyproject.toml
assets/: base.css
