[tool.poetry]
name = "hello-dash"
version = "0.1.0"
description = ""
authors = ["thuwarakeshm <thuwarakeshm@stax.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.2"
dash = "^1.21.0"
dash-bootstrap-components = "^0.13.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^21.8b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
